# RAG-for-Production

./: .gitignore  .pre-commit-config.yaml  README.md  arxiv_downloader.py  config.py  config.yaml  documents_loader.py  embeddings.py  evaluation.py  evaluations.py  generation.py  html_section_parser.py  indexer.py  indexing.py  models.py  pyproject.toml  query.py  retrieval.py  splitter.py  storage.py  text_splitter.py  tools.py  visualization.py
